# mauna-power-manager

./: .gitignore  Readme.md  mauna-power-manager.pot  meson.build  update-translation.sh
data/: MainWindow.ui  config.ini  mpm-autostart.desktop  mpm-cli.sh  mpm-client.desktop  mpm-libexec.sh  mpm-trigger.sh  mpm.openrc  mpm.policy  mpm.systemd  mpm.sysvinit
debian/: changelog  control  copyright  postinst  preinst
po/: LINGUAS  POTFILES  af.po  ar.po  bg.po  ca.po  cs.po  de.po  el.po  en.po  en_GB.po  en_US.po  es.po  he.po  hi.po  is.po  ja.po  nl.po  pt.po  pt_BR.po  ru.po  sv.po  ta.po  tr.po  zh_CN.po
src/: Readme.rst
src/client/: MainWindow.py  actions.py  cli.py  main.py  util.py
src/common/: config.py  detect.py  file.py  logging.py
src/service/: actions.py  main.py  service.py  util.py
src/service/backends/: battery.py  power.py
src/udev-trigger/: main.py  mpm.rule
